devscripts (2.12.5) UNRELEASED; urgency=low

  * bts:
    + Provide a clearer error message when Authen::SASL isn't installed.
      (Closes: #689816)
    + Don't require a usertag after a `=' operator.  (Closes: #689815)

 -- James McCoy <jamessan@debian.org>  Sat, 06 Oct 2012 15:19:58 -0400

devscripts (2.12.4) unstable; urgency=low

  [ James McCoy ]
  * dget: Avoid an infinite loop when a .changes/.dsc file references itself.
    (Closes: #687670)
  * debdiff:
    + Set $TMPDIR when running interdiff so its temp files get cleaned up on
      exit.
    + Fallback to manual diff of source package if interdiff fails.  (Closes:
      #685202)
  * dcmd: Don't add "--" to the command being executed.  The user has to know
    where this should be used/if it can be used.  (Closes: #687964)
  * debcheckout: Fix collision in short options.  Use -P for --package.
    (Closes: #688150)

  [ Benjamin Drung ]
  * licensecheck: Recognize licenses in (fixed-form) Fortran code. Thanks to
    Francesco Poli for the patch and the example. (Closes: #687452)

 -- James McCoy <jamessan@debian.org>  Mon, 24 Sep 2012 18:51:12 -0400

devscripts (2.12.3) unstable; urgency=medium

  [ Benjamin Drung ]
  * licensecheck:
    - Don't truncate other licenses on Public domain or WTFPL presence.
      Thanks to Garrett Holmstrom from Fedora for the patch.
    - Remove trailing spaces.
    - add --machine option that outputs results in a machine readable format.
      Thanks to Eric Lavarde for the patch. (Closes: #583750)
    - Trim trailing period from some GPL notices' versions.

  [ Richard W.M. Jones ]
  * licensecheck: Check OCaml programs by default (*.ml, *.mli).

  [ Ville Skyttä ]
  * Spelling fixes.
  * licensecheck: Trim trailing comma from some GPL notices' versions.

  [ David Prévot ]
  * licensecheck.1: Consistency fix.
  * French translation update.

  [ Cyril Brulebois ]
  * getbuildlog: When several build logs are available, save all of them