@@ -205,7 +205,7 @@ And now, in mostly alphabetical order, the scripts:
 - suspicious-source: outputs a list of files which are not common source
   files [python-magic]
 
-- svnpath: Prints the path to the suversion repository of a subversion
+- svnpath: Prints the path to the Subversion repository of a Subversion
   checkout. Also supports calculating the paths for branches and
   tags in a repository independent fashion. Used by debcommit to generate
   svn tags. [subversion]
