@@ -1,9 +1,14 @@
 devscripts (2.12.5) UNRELEASED; urgency=low
 
+  [ James McCoy ]
   * bts:
     + Provide a clearer error message when Authen::SASL isn't installed.
       (Closes: #689816)
     + Don't require a usertag after a `=' operator.  (Closes: #689815)
+
+  [ Benjamin Drung ]
+  * Fix Subversion typo and write all instances of it with an capital initial
+    letter. Thanks to Regid Ichira for the finding. (Closes: #689953)
 
  -- James McCoy <jamessan@debian.org>  Sat, 06 Oct 2012 15:19:58 -0400
 
